# ai-book-assistant

./: .env.example  .gitignore  01_PROJECT_PLANNING.md  02_SYSTEM_DESIGN.md  03_AI_AGENT_RULES.md  04_TASKLIST.md  05_PROMPT_LIBRARY.md  06_EVALUATION_PLAN.md  07_FRONTEND_DESIGN_GUIDE.md
backend/: README.md  main.py  pyproject.toml
backend/api/: books.py  chat.py  health.py  router.py
backend/core/: config.py  exception_handlers.py  logging.py
backend/database/: chroma.py  init_db.py  seed_system_profile.py  session.py
backend/models/: __init__.py  book.py  chapter.py  chat_history.py  chunk.py  summary.py  system_profile.py
backend/repositories/: __init__.py  base.py  book.py  chapter.py  chat_history.py  chunk.py  summary.py  system_profile.py
backend/schemas/: book.py  chat.py  health.py  summary.py
backend/services/: background_summary.py  book_indexing.py  indexing_status.py
backend/tests/: test_app_identity.py  test_basic_crud.py  test_book_indexing.py  test_book_summary.py  test_book_summary_manual.py  test_chapter_summary.py  test_chapter_summary_manual.py  test_chat_graph.py  test_chat_graph_manual.py  test_chat_graph_nodes.py  test_chat_pipeline.py  test_chat_sources.py  test_chroma_store.py  test_chunk_embedding.py  test_chunk_summary.py  test_chunk_summary_manual.py  test_chunking.py  test_context_builder.py  test_embedding_manual.py  test_qa_prompt.py  test_question_embedding.py  test_question_router.py  test_qwen_qa.py  test_retrieval_manual.py  test_similarity_search.py  test_summary_persistence.py  test_text_cleaning.py
(+51 files in other folders)
