[project]
name = "ai-book-assistant-backend"
version = "0.1.0"
description = "FastAPI backend for AI Book Assistant."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "chromadb>=1.0.0",
    "fastapi>=0.116.0",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".venv",
]

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "I",
    "UP",
]

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"
